alignment fixed

--- a/your_nutritionist/frontend/src/Components/Rating/RatingCard/RatingCard.scss
+++ b/your_nutritionist/frontend/src/Components/Rating/RatingCard/RatingCard.scss
@@ -22,6 +22,7 @@ $comment-width: 250px;
 
 		.comment-profile {
 			border-radius: 50%;
+			box-shadow: 7px 6px 10px -6px rgba(91, 91, 91, 0.4);
 			width: 80px;
 			height: 80px;
 			background: rgb(188, 0, 45);
