--- a/your_nutritionist/frontend/src/Components/Rating/RatingHeader/RatingHeader.scss
+++ b/your_nutritionist/frontend/src/Components/Rating/RatingHeader/RatingHeader.scss
@@ -1,7 +1,9 @@
 .rating-header {
 	margin: 1rem 0;
 	.add-comment-wrapper {
-		margin: 1rem 0;
+		margin: 0 0 1rem 0;
+		align-items: center;
+		padding-top: 0;
 	}
 }
 
@@ -23,7 +25,6 @@
 }
 
 .add-comment-wrapper {
-	justify-content: right;
 	display: flex;
 }
 
